--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint-staged": {
+      "*.{js,jsx,ts,tsx}": ["eslint --fix", "git add"]
+    },
+    "husky": {
+      "hooks": {
+        "pre-commit": "lint-staged"
+      }
+    }
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
@@ -32,6 +40,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
   }
