--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint-staged": {
-      "*.{js,jsx,ts,tsx}": ["eslint --fix", "git add"]
-    },
-    "husky": {
-      "hooks": {
-        "pre-commit": "lint-staged"
-      }
+    "lint": "next lint"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": ["eslint --fix", "git add"]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
     }
   },
   "dependencies": {
