--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "formik": "^2.4.0",
     "mini-css-extract-plugin": "^2.7.6",
     "next": "13.4.3",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
