--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "next": "13.4.3",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.12.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.11.2",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "autoprefixer": "^10.4.14",
