--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "houseapp",
+  "name": "dyre-bo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "deploy": "npx vercel --prod"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
