--- a/package.json
+++ b/package.json
@@ -39,15 +39,19 @@
     "next": "13.4.3",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-click-outside": "^3.0.1",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.12.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "react-modal": "^3.16.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react-date-range": "^1.4.4",
     "@types/react-datepicker": "^4.11.2",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "autoprefixer": "^10.4.14",
